--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Title</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <meta name="vievport" content="width=device-width, initial-scale=1.0">
     <script src="js/jquery-1.8.3.min.js"></script>
     <script src="js/main.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
